--- a/src/main/resources/templates/addworkout.html
+++ b/src/main/resources/templates/addworkout.html
@@ -8,14 +8,16 @@
 
     <body>
         <div class="container">
+            <div style="clear: both; display: block; height: 20px;"></div>
             <div class="col-md-4">
                 <h1>Add workout</h1>
             </div>
+            <div style="clear: both; display: block; height: 24px;"></div>
             <div class="container">
-                <form th:object="${workout}" th:action="@{save}" action="#" method="POST">
+                <form th:object="${workout}" th:action="@{/save}" action="#" method="POST">
                     <div class="row row-no-gutters">
                         <label for="date" class="col-md-1">Date</label>
-                        <input type="date" id="date" th:field="*{date}" class="col-md-2"/>
+                        <input type="date" id="date" th:field="*{date}" class="col-md-2" required/>
                     </div>
                     <div style="clear: both; display: block; height: 10px;"></div>
                     <div class="row row-no-gutters">
@@ -23,14 +25,12 @@
                         <input type="text" id="routine" th:field="*{routine}" class="col-md-2"/>
                     </div>
                     <div style="clear: both; display: block; height: 10px;"></div>
-                    <!-- <label for="categorylist">Category</label>
-                    <select id="categorylist" th:field="*{category}" class="form-control" style="width: auto;">
-                        <option th:each="category: ${categories}"
-                                th:value="${category.categoryId}"
-                                th:text="${category.name}"></option>
-                    </select>
-                    <div style="clear: both; display: block; height: 10px;"></div> -->
-                    <input type="submit" class="btn btn-success" value="Save"></input>
+                    <div class="row row-no-gutters">
+                        <label for="location" class="col-md-1">Location</label>
+                        <input type="text" id="location" th:field="*{location}" class="col-md-2"/>
+                    </div>
+                    <div style="clear: both; display: block; height: 20px;"></div>
+                    <input type="submit" class="btn btn-success" value="Save workout" />
                     <a href="/workoutlist" class="btn btn-danger">Cancel</a>
                 </form>
             </div>
