--- a/src/main/resources/templates/workoutlist.html
+++ b/src/main/resources/templates/workoutlist.html
@@ -7,20 +7,23 @@
     </head>
 
     <body>
+        <div style="clear: both; display: block; height: 20px;"></div>
+        <div class="container">
+            <div class="col-md-12">
+                <h3 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]! Welcome to your personal Workout Planner!</h3>
+            </div>
+            <div class="col-md-4">
+                <form th:action="@{/logout}" method="POST">
+                    <input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+                </form>
+            </div>
+        </div>
         <div class="container">
             <div style="clear: both; display: block; height: 20px;"></div>
             <div class="col-md-4">
                 <h1>Workouts</h1>
             </div>
             <div style="clear: both; display: block; height: 20px;"></div>
-            <!-- <div class="col-md-4">
-                <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]!</h3>
-            </div>
-            <div class="col-md-4" style="padding:20px 0">
-                <form th:action="@{/logout}" method="POST">
-                    <input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
-                </form>
-            </div> -->
             <table class="table table-striped">
                 <tr>
                     <th>Date</th>
