Minor visual changes

--- a/src/main/resources/templates/addworkout.html
+++ b/src/main/resources/templates/addworkout.html
@@ -16,22 +16,22 @@
             <div class="container">
                 <form th:object="${workout}" th:action="@{/save}" action="#" method="POST">
                     <div class="row row-no-gutters">
-                        <label for="date" class="col-md-1">Date</label>
-                        <input type="date" id="date" th:field="*{date}" class="col-md-2" required/>
+                        <label for="date" class="col-form-label col-md-1">Date</label>
+                        <input type="date" id="date" th:field="*{date}" class="form-control col-md-2" required/>
                     </div>
                     <div style="clear: both; display: block; height: 10px;"></div>
                     <div class="row row-no-gutters">
-                        <label for="routine" class="col-md-1">Routine</label>
-                        <input type="text" id="routine" th:field="*{routine}" class="col-md-2"/>
+                        <label for="routine" class="col-form-label col-md-1">Routine</label>
+                        <input type="text" id="routine" th:field="*{routine}" class="form-control col-md-2"/>
                     </div>
                     <div style="clear: both; display: block; height: 10px;"></div>
                     <div class="row row-no-gutters">
-                        <label for="location" class="col-md-1">Location</label>
-                        <input type="text" id="location" th:field="*{location}" class="col-md-2"/>
+                        <label for="location" class="col-form-label col-md-1">Location</label>
+                        <input type="text" id="location" th:field="*{location}" class="form-control col-md-2"/>
                     </div>
                     <div style="clear: both; display: block; height: 20px;"></div>
                     <input type="submit" class="btn btn-success" value="Save workout" />
-                    <a href="/workoutlist" class="btn btn-danger">Cancel</a>
+                    <a href="/workoutlist" class="btn btn-outline-danger">Cancel</a>
                 </form>
             </div>
         </div>
