--- a/src/main/resources/templates/exerciselist.html
+++ b/src/main/resources/templates/exerciselist.html
@@ -30,17 +30,16 @@
                     <label for="targetReps" class="col-form-label col-md-1">Target reps</label>
                     <input type="text" id="targetReps" th:field="${exercise.targetReps}" class="form-control col-md-2" required />
                 </div>
-                <div style="clear: both; display: block; height: 10px;"></div>
-                <div class="row row-no-gutters">
-                    <label for="comments" class="col-form-label col-md-1">Comments</label>
-                    <input type="text" id="comments" th:field="${exercise.comments}" class="form-control col-md-2" />
-                </div>
-                <div style="clear: both; display: block; height: 10px;"></div>
+                <div style="clear: both; display: block; height: 20px;"></div>
                 <input type="submit" class="btn btn-success" value="Add exercise" />
                 <input type="reset" class="btn btn-outline-danger" value="Reset form" />
                 <div style="clear: both; display: block; height: 10px;"></div>
             </form>
             <div style="clear: both; display: block; height: 20px;"></div>
+            <div th:if="${warningMessage}">
+                <div style="clear: both; display: block; height: 20px;"></div>
+                <div class="alert alert-warning col-md-4" th:text="${warningMessage}"></div>
+            </div>
             <div>
                 <h1>Exercises</h1>
             </div>
@@ -92,20 +91,11 @@
                     <td th:unless="${exercise.comments == null || exercise.comments == ''}">
                         <div th:text="${exercise.comments}"></div>
                     </td>
-                    <!-- <td th:text="${exercise.comments}"></td> -->
                     <td><a th:href="@{/workoutlist/{id}/delete/{exerciseid}(id=${workout.workoutId}, exerciseid=${exercise.exerciseId})}" class="btn btn-xs btn-outline-danger">Remove</a></td>
                 </tr>
             </table>
 
             <a href="/workoutlist" class="btn btn-primary">Return to workouts</a>
-            <!-- <div class="col-md-4">
-                <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]!</h3>
-            </div>
-            <div class="col-md-4" style="padding:20px 0">
-                <form th:action="@{/logout}" method="POST">
-                    <input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
-                </form>
-            </div> -->
         </div>
     </body>
 </html>
