--- a/src/main/resources/templates/workoutlist.html
+++ b/src/main/resources/templates/workoutlist.html
@@ -12,10 +12,19 @@
             <div class="col-md-12">
                 <h3 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]! Welcome to your personal Workout Planner!</h3>
             </div>
-            <div class="col-md-4">
-                <form th:action="@{/logout}" method="POST">
-                    <input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
-                </form>
+            <div class="row">
+                <div class="col-md-1">
+                    <form th:action="@{/logout}" method="POST">
+                        <input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+                    </form>
+                </div>
+                <div sec:authorize="hasAuthority('ADMIN')" class="col-md-2 offset-md-1">
+                    <a href="/userlist" class="btn btn-sm btn-outline-info">User list</a>
+                </div>
+            </div>
+            <div th:if="${warningMessage}">
+                <div style="clear: both; display: block; height: 20px;"></div>
+                <div class="alert alert-warning col-md-4" th:text="${warningMessage}"></div>
             </div>
         </div>
         <div class="container">
@@ -32,7 +41,6 @@
                     <th>&nbsp;</th>
                     <th>&nbsp;</th>
                     <th>&nbsp;</th>
-                    <!-- <th sec:authorize="hasAuthority('ADMIN')">&nbsp;</th> -->
                 </tr>
                 <tr th:if="${workouts.empty}">
                     <td colspan="4">No workouts yet! Add a workout to get started.</td>
@@ -43,8 +51,7 @@
                     <td th:text="${workout.location}"></td>
                     <td><a th:href="@{/workoutlist/{id}(id=${workout.workoutId})}" class="btn btn-xs btn-success">See exercises</a></td>
                     <td><a th:href="@{/edit/{id}(id=${workout.workoutId})}" class="btn btn-xs btn-warning">Edit workout</a></td>
-                    <td><a th:href="@{/delete/{id}(id=${workout.workoutId})}" class="btn btn-xs btn-outline-danger">Delete workout</a></td>
-                    <!-- <td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-xs btn-danger">Delete</a></td> -->
+                    <td><a th:href="@{/delete/{id}(id=${workout.workoutId})}" class="btn btn-xs btn-outline-danger" onclick="return confirm('Are you sure you wish to delete this workout?')">Delete workout</a></td>
                 </tr>
             </table>
             <a href="/add" class="btn btn-primary">Add workout</a>
