Minor bug fixes, also Exercise  validations added

--- a/src/main/resources/templates/addworkout.html
+++ b/src/main/resources/templates/addworkout.html
@@ -22,12 +22,12 @@
                     <div style="clear: both; display: block; height: 10px;"></div>
                     <div class="row row-no-gutters">
                         <label for="routine" class="col-form-label col-md-1">Routine</label>
-                        <input type="text" id="routine" th:field="*{routine}" class="form-control col-md-2"/>
+                        <input type="text" id="routine" th:field="*{routine}" class="form-control col-md-2" placeholder='e.g. "Legs & abs"'/>
                     </div>
                     <div style="clear: both; display: block; height: 10px;"></div>
                     <div class="row row-no-gutters">
                         <label for="location" class="col-form-label col-md-1">Location</label>
-                        <input type="text" id="location" th:field="*{location}" class="form-control col-md-2"/>
+                        <input type="text" id="location" th:field="*{location}" class="form-control col-md-2" placeholder='e.g. "Elixia Itäkeskus"'/>
                     </div>
                     <div style="clear: both; display: block; height: 20px;"></div>
                     <input type="submit" class="btn btn-success" value="Save workout" />
