--- a/src/main/resources/templates/editworkout.html
+++ b/src/main/resources/templates/editworkout.html
@@ -18,17 +18,17 @@
                     <input type="hidden" id="id" th:field="*{workoutId}" readonly="readonly" class="form-control" />
                     <div class="row row-no-gutters">
                         <label for="date" class="col-form-label col-md-1">Date</label>
-                        <input type="date" id="date" th:field="*{date}" class="form-control col-md-2"/>
+                        <input type="date" id="date" th:field="*{date}" class="form-control col-md-2" required/>
                     </div>
                     <div style="clear: both; display: block; height: 10px;"></div>
                     <div class="row row-no-gutters">
                         <label for="routine" class="col-form-label col-md-1">Routine</label>
-                        <input type="text" id="routine" th:field="*{routine}" class="form-control col-md-2"/>
+                        <input type="text" id="routine" th:field="*{routine}" class="form-control col-md-2" placeholder='e.g. "Legs & abs"'/>
                     </div>
                     <div style="clear: both; display: block; height: 10px;"></div>
                     <div class="row row-no-gutters">
                         <label for="location" class="col-form-label col-md-1">Location</label>
-                        <input type="text" id="location" th:field="*{location}" class="form-control col-md-2"/>
+                        <input type="text" id="location" th:field="*{location}" class="form-control col-md-2" placeholder='e.g. "Elixia Itäkeskus"'/>
                     </div>
                     <div style="clear: both; display: block; height: 20px;"></div>
                     <input type="hidden" id="exercises" th:field="*{exercises}" readonly />
